# finetune_1B_MCQ_VN

./: .env.example  .gitignore  AGENT.md  BaselineTempoRun.ipynb  COLAB_GUIDE.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-unsloth.txt  requirements.txt
configs/: base.yaml  fullft_qwen3_0_6b.yaml  qlora_qwen3_0_6b.yaml  unsloth_qwen3_0_6b.yaml  unsloth_qwen3_0_6b_cot.yaml
notebooks/: 00_setup_colab.ipynb  01_data_prep.ipynb  02_enrich.ipynb  03_train_qlora.ipynb  04_train_fullft.ipynb  05_evaluate.ipynb  06_infer_submission.ipynb  07_push_hf.ipynb  08_full_pipeline_unsloth.ipynb  tempo-run2025-conversation.ipynb  tempo-run2025_CoT.ipynb
scripts/: download_data.py  enrich_data.py  evaluate.py  infer.py  make_sft_jsonl.py  merge_enriched.py  train.py  upload_data_to_hf.py
src/temprun/: __init__.py  cli.py  data.py  enrich.py  evaluate.py  hf_utils.py  infer.py  prompts.py  py.typed  train.py  utils.py
tests/: test_data.py  test_enrich.py  test_hf_utils.py  test_prompts.py  test_train_smoke.py  test_utils.py
